# prueba_simplilatam

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
django-simplilatam/: Dockerfile  manage.py
django-simplilatam/companies_employees/: admin.py  apps.py  models.py  schema.py
django-simplilatam/companies_employees/app_schema/: types.py
django-simplilatam/companies_employees/app_schema/mutations/: __init__.py  create_company.py  create_employee.py  update_delete_employee.py
django-simplilatam/companies_employees/app_schema/queries/: __init__.py  get_companies.py  get_employees.py
django-simplilatam/companies_employees/migrations/: 0001_initial.py  0002_alter_companies_rut_alter_employees_rut.py
django-simplilatam/companies_employees/models/: __init__.py  companies.py  employees.py
django-simplilatam/simplilatam/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf  proxy_params
react-simplilatam/: Dockerfile.dev  codegen.yml  index.html  package-lock.json  package.json  vite.config.ts
react-simplilatam/src/: App.tsx  Layout.tsx  index.tsx
react-simplilatam/src/graphql/companiesEmployees/: companiesEmployees.graphql
react-simplilatam/src/helpers/: fetcher.ts  validators.ts
react-simplilatam/src/hooks/: generated.ts
react-simplilatam/src/views/companies/: Companies.tsx  CreateCompanyForm.tsx
react-simplilatam/src/views/employees/: CreateEmployeeForm.tsx  Employees.tsx
react-simplilatam/src/views/home/: Home.tsx
