
[project]
name = "simpli_latam"
version = "0.1.0"
description = "Prueba simpli_latam"
authors = [
    {name = "Nicolas Pino", email = "nicolas.pinol@mail.udp.cl"},
]
dependencies = [
    "django>=4.2.3",
    "graphene-django>=3.1.2",
    "python-decouple>=3.8",
    "dj-database-url>=2.0.0",
    "psycopg2-binary>=2.9.6",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
